--- a/styles/basic.css
+++ b/styles/basic.css
@@ -6,7 +6,7 @@ html {
     background-color: rgb(233, 229, 214);
 }
 body {
-    width: 800px;
+    width: 600px;
     margin: 0 auto;/* Center */
     background-color: white;
     padding: 0 20px 20px 20px;
@@ -16,4 +16,11 @@ h1 {
     margin: 0;
     padding: 20px 0;
     text-shadow: 1px 1px 1px #333;
+    text-align: center;
+}
+h2 {
+    padding-top: 20px;
+}
+h3 {
+    padding-top: 10px;
 }
